[gd_scene load_steps=11 format=2]

[ext_resource path="res://TwitchChat.gd" type="Script" id=1]
[ext_resource path="res://themes/gotham.tres" type="Theme" id=2]
[ext_resource path="res://fonts/Montserrat-Black.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Numerica.gd" type="Script" id=4]
[ext_resource path="res://bnt_settings.gd" type="Script" id=5]
[ext_resource path="res://icon.png" type="Texture" id=6]
[ext_resource path="res://bnt_return.gd" type="Script" id=7]
[ext_resource path="res://themes/menu.tres" type="Theme" id=8]

[sub_resource type="DynamicFont" id=1]
size = 200
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[node name="Main" type="Node2D"]

[node name="TwitchChat" type="Node" parent="."]
script = ExtResource( 1 )

[node name="HTTPRequest" type="HTTPRequest" parent="TwitchChat"]

[node name="Game" type="Node" parent="."]

[node name="Panel" type="Panel" parent="Game"]
margin_right = 600.0
margin_bottom = 600.0

[node name="bnt_settings" type="Button" parent="Game/Panel"]
margin_left = 516.0
margin_top = 8.0
margin_right = 592.0
margin_bottom = 80.0
icon = ExtResource( 6 )
script = ExtResource( 5 )

[node name="number" type="Label" parent="Game/Panel"]
margin_left = 102.0
margin_top = 138.0
margin_right = 516.0
margin_bottom = 505.0
theme = SubResource( 2 )
text = "000"
align = 1
valign = 1

[node name="label_by" type="Label" parent="Game/Panel"]
margin_left = 79.0
margin_top = 72.0
margin_right = 465.0
margin_bottom = 106.0
rect_pivot_offset = Vector2( 71, 13 )
theme = ExtResource( 2 )
text = "by: "

[node name="label_highscore" type="Label" parent="Game/Panel"]
margin_left = 79.0
margin_top = 38.0
margin_right = 465.0
margin_bottom = 65.0
rect_pivot_offset = Vector2( 71, 13 )
theme = ExtResource( 2 )
text = "HIGH SCORE:"

[node name="label_username" type="Label" parent="Game/Panel"]
margin_left = 127.0
margin_top = 505.0
margin_right = 513.0
margin_bottom = 539.0
rect_pivot_offset = Vector2( 71, 13 )
theme = ExtResource( 2 )
text = "nobody"
align = 1

[node name="Panel2" type="Panel" parent="Game"]
margin_right = 600.0
margin_bottom = 600.0
theme = ExtResource( 8 )

[node name="bnt_return" type="Button" parent="Game/Panel2"]
margin_left = 516.0
margin_top = 8.0
margin_right = 592.0
margin_bottom = 80.0
icon = ExtResource( 6 )
script = ExtResource( 7 )

[node name="VBoxContainer" type="VBoxContainer" parent="Game/Panel2"]
margin_left = 57.0
margin_top = 106.0
margin_right = 552.0
margin_bottom = 562.0
rect_pivot_offset = Vector2( -784, 305 )

[node name="HBoxContainer" type="HBoxContainer" parent="Game/Panel2/VBoxContainer"]
margin_right = 495.0
margin_bottom = 38.0
size_flags_vertical = 3

[node name="Label" type="Label" parent="Game/Panel2/VBoxContainer/HBoxContainer"]
margin_top = 8.0
margin_right = 245.0
margin_bottom = 29.0
size_flags_horizontal = 3
text = "Min Ban Time"

[node name="minBanTime" type="SpinBox" parent="Game/Panel2/VBoxContainer/HBoxContainer"]
margin_left = 249.0
margin_right = 495.0
margin_bottom = 38.0
size_flags_horizontal = 3
value = 10.0
align = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="Game/Panel2/VBoxContainer"]
margin_top = 42.0
margin_right = 495.0
margin_bottom = 87.0
size_flags_vertical = 3

[node name="Label" type="Label" parent="Game/Panel2/VBoxContainer/HBoxContainer2"]
margin_right = 245.0
margin_bottom = 45.0
size_flags_horizontal = 3
text = "Ban Time
Multiplier"

[node name="banTimeMultiplier" type="SpinBox" parent="Game/Panel2/VBoxContainer/HBoxContainer2"]
margin_left = 249.0
margin_right = 495.0
margin_bottom = 45.0
size_flags_horizontal = 3
align = 1

[node name="HBoxContainer3" type="HBoxContainer" parent="Game/Panel2/VBoxContainer"]
margin_top = 91.0
margin_right = 495.0
margin_bottom = 136.0
size_flags_vertical = 3

[node name="Label" type="Label" parent="Game/Panel2/VBoxContainer/HBoxContainer3"]
margin_right = 245.0
margin_bottom = 45.0
size_flags_horizontal = 3
text = "Ban Player with
current Number"

[node name="banPlayerWithCurrentNumber" type="CheckBox" parent="Game/Panel2/VBoxContainer/HBoxContainer3"]
margin_left = 249.0
margin_right = 495.0
margin_bottom = 45.0
size_flags_horizontal = 3
pressed = true
icon = ExtResource( 6 )
align = 1
icon_align = 1
expand_icon = true

[node name="HBoxContainer9" type="HBoxContainer" parent="Game/Panel2/VBoxContainer"]
margin_top = 140.0
margin_right = 495.0
margin_bottom = 179.0
size_flags_vertical = 3

[node name="Label" type="Label" parent="Game/Panel2/VBoxContainer/HBoxContainer9"]
margin_top = 9.0
margin_right = 245.0
margin_bottom = 30.0
size_flags_horizontal = 3
text = "Ban Time"

[node name="banPlayerWithCurrentNumberTime" type="SpinBox" parent="Game/Panel2/VBoxContainer/HBoxContainer9"]
margin_left = 249.0
margin_right = 495.0
margin_bottom = 39.0
size_flags_horizontal = 3
value = 20.0
align = 1

[node name="HBoxContainer8" type="HBoxContainer" parent="Game/Panel2/VBoxContainer"]
margin_top = 183.0
margin_right = 495.0
margin_bottom = 222.0
size_flags_vertical = 3

[node name="Label" type="Label" parent="Game/Panel2/VBoxContainer/HBoxContainer8"]
margin_top = 9.0
margin_right = 245.0
margin_bottom = 30.0
size_flags_horizontal = 3
text = "Allow Mods Play"

[node name="allowModsPlay" type="CheckBox" parent="Game/Panel2/VBoxContainer/HBoxContainer8"]
margin_left = 249.0
margin_right = 495.0
margin_bottom = 39.0
size_flags_horizontal = 3
disabled = true
icon = ExtResource( 6 )
align = 1
icon_align = 1
expand_icon = true

[node name="HBoxContainer4" type="HBoxContainer" parent="Game/Panel2/VBoxContainer"]
margin_top = 226.0
margin_right = 495.0
margin_bottom = 265.0
size_flags_vertical = 3

[node name="Label" type="Label" parent="Game/Panel2/VBoxContainer/HBoxContainer4"]
margin_top = 9.0
margin_right = 245.0
margin_bottom = 30.0
size_flags_horizontal = 3
text = "Allow Ban Mods"

[node name="allowBanMods" type="CheckBox" parent="Game/Panel2/VBoxContainer/HBoxContainer4"]
margin_left = 249.0
margin_right = 495.0
margin_bottom = 39.0
size_flags_horizontal = 3
disabled = true
icon = ExtResource( 6 )
align = 1
icon_align = 1
expand_icon = true

[node name="HBoxContainer5" type="HBoxContainer" parent="Game/Panel2/VBoxContainer"]
margin_top = 269.0
margin_right = 495.0
margin_bottom = 307.0
size_flags_vertical = 3

[node name="Label" type="Label" parent="Game/Panel2/VBoxContainer/HBoxContainer5"]
margin_top = 8.0
margin_right = 245.0
margin_bottom = 29.0
size_flags_horizontal = 3
text = "Temporal VIP"

[node name="temporalVip" type="CheckBox" parent="Game/Panel2/VBoxContainer/HBoxContainer5"]
margin_left = 249.0
margin_right = 495.0
margin_bottom = 38.0
size_flags_horizontal = 3
disabled = true
icon = ExtResource( 6 )
align = 1
icon_align = 1
expand_icon = true

[node name="HBoxContainer6" type="HBoxContainer" parent="Game/Panel2/VBoxContainer"]
margin_top = 311.0
margin_right = 495.0
margin_bottom = 381.0
size_flags_vertical = 3

[node name="Label" type="Label" parent="Game/Panel2/VBoxContainer/HBoxContainer6"]
margin_top = 12.0
margin_right = 162.0
margin_bottom = 57.0
size_flags_horizontal = 3
text = "Anonimous
Connect Channel"

[node name="anonimousChannel" type="LineEdit" parent="Game/Panel2/VBoxContainer/HBoxContainer6"]
margin_left = 166.0
margin_right = 328.0
margin_bottom = 70.0
size_flags_horizontal = 3
text = "seyacat"
align = 1

[node name="LineEdit" type="Button" parent="Game/Panel2/VBoxContainer/HBoxContainer6"]
margin_left = 332.0
margin_right = 495.0
margin_bottom = 70.0
size_flags_horizontal = 3
icon = ExtResource( 6 )
icon_align = 1

[node name="HBoxContainer7" type="HBoxContainer" parent="Game/Panel2/VBoxContainer"]
margin_top = 385.0
margin_right = 495.0
margin_bottom = 455.0
size_flags_vertical = 3

[node name="Button" type="Label" parent="Game/Panel2/VBoxContainer/HBoxContainer7"]
margin_top = 12.0
margin_right = 245.0
margin_bottom = 57.0
size_flags_horizontal = 3
text = "Authenticated Connect 
(Allow Ban and Vip)"

[node name="LineEdit" type="Button" parent="Game/Panel2/VBoxContainer/HBoxContainer7"]
margin_left = 249.0
margin_right = 495.0
margin_bottom = 70.0
size_flags_horizontal = 3
icon = ExtResource( 6 )
icon_align = 1

[node name="Numerica" type="Node" parent="."]
script = ExtResource( 4 )

[connection signal="pressed" from="Game/Panel2/VBoxContainer/HBoxContainer6/LineEdit" to="TwitchChat" method="_anon_connection"]
[connection signal="pressed" from="Game/Panel2/VBoxContainer/HBoxContainer7/LineEdit" to="TwitchChat" method="_authenticate"]
